--- a/components/_global.scss
+++ b/components/_global.scss
@@ -58,6 +58,11 @@ a {
 .z-depth-0 {
   box-shadow: none !important;
 }
+
+.z-depth-0-5 {
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 1px -1px rgba(0, 0, 0, 0.2);
+}
+
 .z-depth-1 {
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
 }
