--- a/components/_navbar.scss
+++ b/components/_navbar.scss
@@ -8,7 +8,7 @@ nav {
   }
 
   color: $navbar-font-color;
-  @extend .z-depth-1;
+  @extend .z-depth-0-5;
   background-color: $primary-color;
   width: 100%;
   height: $navbar-height-mobile;
