--- a/components/_potato.scss
+++ b/components/_potato.scss
@@ -6,6 +6,12 @@
     padding: 5px;
 }
 
+.avatar-small{
+    height: 40px !important;
+    width: auto;
+    padding: 5px;
+}
+
 .no-padding{
     padding: 0px;
 }
