--- a/components/_global.scss
+++ b/components/_global.scss
@@ -166,7 +166,7 @@ video.responsive-video {
 
     &.active a { color: #fff; }
 
-    &.active { background-color: $primary-color; }
+    &.active { background-color: $secondary-color; }
 
     &.disabled a {
       cursor: default;
