Change body background color

--- a/components/_global.scss
+++ b/components/_global.scss
@@ -11,7 +11,7 @@ body {
   // display: flex;
   // min-height: 100vh;
   // flex-direction: column;
-  background-color: #fafafa;
+  background-color: #f3f3f3;
 }
 
 main {
