Make the navbar transparent

--- a/components/_navbar.scss
+++ b/components/_navbar.scss
@@ -8,7 +8,7 @@ nav {
   }
 
   color: $navbar-font-color;
-  background-color: $primary-color;
+  background-color: rgba($primary-color, 0.9);
   width: 100%;
   height: $navbar-height-mobile;
   line-height: $navbar-height-mobile;
