Make navigation bar transparent

--- a/components/_navbar.scss
+++ b/components/_navbar.scss
@@ -113,6 +113,7 @@ nav {
       display: block;
       padding: 0 15px;
       cursor: pointer;
+      font-weight: bold;
 
       &.btn, &.btn-large, &.btn-flat, &.btn-floating {
         margin-top: -2px;
