--- a/components/_preloader.scss
+++ b/components/_preloader.scss
@@ -86,6 +86,11 @@
   border-color: #0f9d58;
 }
 
+.spinner-grey,
+.spinner-grey-only {
+  border-color: #757575;
+}
+
 /**
  * IMPORTANT NOTE ABOUT CSS ANIMATION PROPERTIES (keanulee):
  *
