Change Tab color

--- a/components/_variables.scss
+++ b/components/_variables.scss
@@ -249,8 +249,8 @@ $spinner-default-color: $secondary-color !default;
 // 17. Tabs
 // ==========================================================================
 
-$tabs-underline-color: #212121 !default;
-$tabs-text-color: #212121 !default;
+$tabs-underline-color: rgba(0, 0, 0, 0.87) !default;
+$tabs-text-color: rgba(0, 0, 0, 0.87) !default;
 $tabs-bg-color: #fff !default;
 
 
